force-app/main/default/objects/TAG_FIA_Leveranser__c/TAG_FIA_Leveranser__c.object-meta.xml
<CustomObject>
    <label>FIA Leveranse</label>
    <nameField>
        <label>FIA Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FIA Leveranser</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>