force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/Antall_FIA_aktiviteter__c.field-meta.xml
<CustomField>
    <fullName>Antall_FIA_aktiviteter__c</fullName>
    <label>Antall FIA aktiviteter</label>
    <summaryForeignKey>FIA_Aktivitet__c.FIA_Leveranse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>