force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/Eier_av_Fia_sak__c.field-meta.xml
<CustomField>
    <fullName>Eier_av_Fia_sak__c</fullName>
    <label>Eier av Fia-sak</label>
    <length>30</length>
    <type>Text</type>
</CustomField>