force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/Fia_saksnummer__c.field-meta.xml
<CustomField>
    <fullName>Fia_saksnummer__c</fullName>
    <label>Fia saksnummer</label>
    <length>19</length>
    <type>Text</type>
</CustomField>