force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/pne_i_FIA__c.field-meta.xml
<CustomField>
    <fullName>pne_i_FIA__c</fullName>
    <formula>&quot;https://fia.intern.nav.no/virksomhet/&quot;+ TAG_Account__r.INT_OrganizationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Åpne i FIA</label>
    <type>Text</type>
</CustomField>