force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/Se_detaljer__c.field-meta.xml
<CustomField>
    <fullName>Se_detaljer__c</fullName>
    <formula>Hyperlink((&quot;https://nosoftware-ruby-6691.scratch.lightning.force.com/lightning/r/TAG_FIA_Leveranser__c/&quot;+Id+&quot;/view&quot;),&quot;Se detaljer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detaljer</label>
    <type>Text</type>
</CustomField>