force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ny</fullName>
            </value>
            <value>
                <fullName>Vurderes</fullName>
            </value>
            <value>
                <fullName>Aktiv</fullName>
            </value>
            <value>
                <fullName>Levert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>