force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/TAG_Account__c.field-meta.xml
<CustomField>
    <fullName>TAG_Account__c</fullName>
    <label>Konto</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FIA_Satus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>