force-app/main/default/objects/TAG_FIA_Leveranser__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HelseIArbeid</fullName>
            </value>
            <value>
                <fullName>Redusere Sykefravær</fullName>
            </value>
            <value>
                <fullName>Forebyggende Arbeidsmiljø</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>